navigation and container issues on mobile

--- a/assets/css/my-custom-styling.scss
+++ b/assets/css/my-custom-styling.scss
@@ -78,6 +78,11 @@ h6 {
     }
 }
 
+.container.is-fluid {
+    margin-left: 32px;
+    margin-right: 32px;
+}
+
 .main-content {
     margin-top: 8rem;
     margin-bottom: 2rem;
